name:                ascend
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bitonic/ascend#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           (c) 2017 Francesco Mazzoli
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Ascend
  build-depends:
    base >= 4.7 && < 5,
    text
  default-language: Haskell2010
  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/bitonic/ascend
